madklubben form updated

--- a/one.html
+++ b/one.html
@@ -104,7 +104,7 @@
             </ul>
             <ul class="navbar-nav ml-auto mr-lg-4 mr-xl-5">
                 <li class="nav-item mt-2 mb-4 my-lg-0 mr-lg-2 mr-xl-0">
-                    <a class="button-underline px-0 mx-lg-3 " href="rsvp-grr.html">RSVP</a>
+                    <a class="button-underline px-0 mx-lg-3 " href="rsvp.html">RSVP</a>
                 </li>
             </ul>
           </div>
@@ -311,7 +311,7 @@
 
               </div>
 
-              <a class="btn btn-primary-outline btn-lg button-border my-3" href="rsvp-grr.html" role="button" >RSVP</a>
+              <a class="btn btn-primary-outline btn-lg button-border my-3" href="rsvp.html" role="button" >RSVP</a>
             </div>
 
           </div>
@@ -372,7 +372,7 @@
                     <div class="col-6 col-md-4 offset-md-1 col-lg-3 offset-lg-0 py-5 flex-column">
                         <div class="mb-2 flex-column">
                           <div class="nav-item my-3 ">
-                            <a class="nav-link px-md-0 "href="rsvp-grr.html"> RSVP </a>
+                            <a class="nav-link px-md-0 "href="rsvp.html"> RSVP </a>
                           </div>
                           <div class="nav-item my-3">
                             <a class="nav-link px-0" href="mailto:rsvp@theparty.is"> rsvp@theparty.is</a>
