--- a/atmadklubben-form.html
+++ b/atmadklubben-form.html
@@ -103,7 +103,7 @@
             <div class="b-page-navigation ">
               <div class="b-page-navigation__pages">
                   <ul class="navbar-nav ">
-                      <li class="nav-item nav-item-custom px-0">
+                      <li class="nav-item nav-item px-0">
                         <a class="nav-link my-0 px-0 " href="index.html">
                           <span>TheParty.is</span>
                         </a>
@@ -208,7 +208,7 @@
                               <i>Vegetarian Friendly, Vegan Options, Gluten Free Options</i>
                   </p>
 
-                  <a class="btn btn-primary-outline btn-lg button-border my-3" href="atmadklubben.html#dinnerform" role="button" >Choose Your Entrée</a>
+                  <a class="btn btn-primary-outline btn-lg button-border my-3" href="#dinnermenu" role="button" >Choose Your Entrée</a>
 
               </div>
             </div><!-- col -->
@@ -223,11 +223,11 @@
       <section class="" id="madk-about">
         <div class="container-fluid no-padding my-5 py-5">
           <div class="row d-flex nogutter justify-content-center mt-5 pb-5 pb-lg-3 my-md-5 ">
-            <div class="col-12 col-lg-11 offset-lg-2">
+            <div class="col-12 col-lg-11 offset-lg-1">
 
                <div class="row nogutter justify-content-center justify-content-lg-start">
 
-                    <div class="col-12  col-md-7 col-lg-6 offset-lg-3 text-center text-md-left col-xl-5 my-2  pl-md-0">
+                    <div class="col-12  col-md-7 col-lg-6 offset-lg-4 text-center text-md-left col-xl-5 my-2  pl-md-0">
                      <div class="row nogutter justify-content-center">
 
                          <div class="col-12 mt-1 my-3 ">
@@ -254,7 +254,7 @@
 
 
                    <!-- accordion -->
-                   <div class="col-12  col-md-7 col-lg-6 offset-lg-3 text-center text-md-left col-xl-5  pl-md-0 mb-5">
+                   <div class="col-12  col-md-7 col-lg-6 offset-lg-4 text-center text-md-left col-xl-5  pl-md-0 mb-5">
 
                      <p>
                        <a class="text-button" data-toggle="collapse" href="#collapseMadk" role="button" aria-expanded="false" aria-controls="collapseMadk">
@@ -365,7 +365,7 @@
 
 
                       <!-- address -->
-                      <div class="col-10  col-md-7 col-lg-6 offset-lg-3 text-center text-md-left col-xl-5  pl-0">
+                      <div class="col-10  col-md-7 col-lg-6 offset-lg-4 text-center text-md-left col-xl-5  pl-0">
 
                         <div class="mb-1">
                           <h6 class="hed6">Madklubben Vesterbro</h6>
@@ -403,14 +403,14 @@
 
 
       <!-- dinner form -->
-      <section class="dinner dinnerform" id="dinnerform">
+      <section class="dinner dinnermenu" id="dinnermenu">
         <div class="container-fluid no-padding my-5 py-5">
           <div class="row d-flex nogutter justify-content-center mt-5 pb-5 pb-lg-3 my-md-5 ">
-            <div class="col-11 col-lg-11 offset-lg-2">
+            <div class="col-11 col-lg-11 offset-lg-1">
 
                <div class="row nogutter justify-content-center justify-content-lg-start">
 
-                    <div class="col-11  col-md-7 col-lg-6 offset-lg-3  col-xl-5 my-2  pl-md-0">
+                    <div class="col-11  col-md-7 col-lg-6 offset-lg-4  col-xl-5 my-2  pl-md-0">
 
                         <div class="mb-5">
                           <h3 class="hed3 text-center text-md-left">The Entrée</h3>
@@ -1080,11 +1080,11 @@
       <section class="madk-split" id="madk-split">
         <div class="container-fluid no-padding my-5 py-5">
           <div class="row d-flex nogutter justify-content-center pb-5 pb-lg-3 my-md-5 ">
-            <div class="col-12 col-lg-11 offset-lg-2">
+            <div class="col-12 col-lg-11 offset-lg-1">
 
                <div class="row nogutter justify-content-center justify-content-lg-start">
 
-                    <div class="col-12  col-md-7 col-lg-6 offset-lg-3 text-center text-md-left col-xl-5 my-2  pl-md-0">
+                    <div class="col-12  col-md-7 col-lg-6 offset-lg-4 text-center text-md-left col-xl-5 my-2  pl-md-0">
 
                       <div class="row d-flex nogutter justify-content-center justify-content-lg-start">
                         <div class="col-6 mt-1 ">
@@ -1130,11 +1130,11 @@
       <section class="wed" id="madk-share">
         <div class="container-fluid no-padding my-5 py-5">
           <div class="row d-flex nogutter justify-content-center mt-5 pb-5 pb-lg-3 my-md-5 ">
-            <div class="col-12 col-lg-11 offset-lg-2">
+            <div class="col-12 col-lg-11 offset-lg-1">
 
                <div class="row nogutter justify-content-center justify-content-lg-start">
 
-                    <div class="col-12  col-md-7 col-lg-6 offset-lg-3 text-center text-md-left col-xl-5 my-2  pl-md-0">
+                    <div class="col-12  col-md-7 col-lg-6 offset-lg-4 text-center text-md-left col-xl-5 my-2  pl-md-0">
 
                         <div class="mb-1  text-center text-md-left">
                           <!-- <p class="mb-0">18:30 </p> -->
@@ -1146,7 +1146,7 @@
 
                     </div><!-- col -->
 
-                    <div class="col-6 col-sm-4 col-md-7 col-lg-6 offset-lg-3 col-xl-5 my-2 mt-3 px-0">
+                    <div class="col-6 col-sm-4 col-md-7 col-lg-6 offset-lg-4 col-xl-5 my-2 mt-3 px-0">
 
                         <div class="mb-1  text-center text-md-left" >
                           <p class="">
@@ -1176,11 +1176,11 @@
         <section class="wed" id="madk-dessert">
           <div class="container-fluid no-padding my-5 py-5">
             <div class="row d-flex nogutter justify-content-center mt-5 pb-5 pb-lg-3 my-md-5 ">
-              <div class="col-12 col-lg-11 offset-lg-2">
+              <div class="col-12 col-lg-11 offset-lg-1">
 
                  <div class="row nogutter justify-content-center justify-content-lg-start">
 
-                      <div class="col-10  col-md-7 col-lg-6 offset-lg-3 text-center text-md-left col-xl-5 my-2  pl-md-0">
+                      <div class="col-10  col-md-7 col-lg-6 offset-lg-4 text-center text-md-left col-xl-5 my-2  pl-md-0">
 
                           <div class="mb-1  text-center text-md-left">
                             <p class="mb-0">18:30 </p>
@@ -1217,21 +1217,21 @@
                       <!--First column-->
                       <div class="col-6 col-md-4 col-lg-3 py-5 flex-column">
                           <div class="mb-2">
-                            <div class="nav-item-custom my-3">
+                            <div class="nav-item my-3">
                               <a class="nav-link px-0 "href="index.html"> TheParty.is </a>
                             </div>
 
-                            <div class="nav-item-custom my-3 ">
+                            <div class="nav-item my-3 ">
                               <a class="nav-link px-0 "href="inportland.html"> in Portland </a>
                             </div>
-                            <div class="nav-item-custom my-3 ">
+                            <div class="nav-item my-3 ">
                               <a class="nav-link px-0 "href="ingrandrapids.html"> in Grand&nbsp;Rapids </a>
                             </div>
-                            <div class="nav-item-custom my-3">
+                            <div class="nav-item my-3">
                               <a class="nav-link px-0 "href="faq.html"> FAQ </a>
                             </div>
 
-                            <div class="nav-item-custom my-3">
+                            <div class="nav-item my-3">
                               <a class="nav-link px-0" href="mailto:rsvp@theparty.is"> rsvp@theparty.is</a>
                             </div>
                           </div>
@@ -1241,17 +1241,17 @@
                       <div class="col-6 col-md-4 col-lg-3 py-5 flex-column">
                           <div class="mb-2">
 
-                            <div class="nav-item-custom my-3 ">
+                            <div class="nav-item my-3 ">
                               <a class="nav-link px-0 "href="incopenhagen.html"> in Copenhagen </a>
                             </div>
 
-                            <div class="nav-item-custom my-3 ">
+                            <div class="nav-item my-3 ">
                               <a class="nav-link px-0 "href="gettingmarried.html"> Getting Married </a>
                             </div>
-                            <div class="nav-item-custom my-3 active ">
+                            <div class="nav-item my-3 active ">
                               <a class="nav-link px-0 "href="atmadklubben.html"> At Madklubben </a>
                             </div>
-                            <div class="nav-item-custom my-3">
+                            <div class="nav-item my-3">
                               <a class="nav-link px-0" href="https://www.instagram.com/explore/tags/departy18/?hl=en" target="_blank"> &#x23;deParty18 </a>
                             </div>
                           </div>
@@ -1288,7 +1288,7 @@
 
       <!-- Conditional Form -->
       <script src="js/jquery.min.js"></script>
-      <!-- <script src="js/conditionize.js"></script> -->
+      <script src="js/conditionize.js"></script>
 
     </body>
 
