--- a/two-dinner.html
+++ b/two-dinner.html
@@ -102,32 +102,16 @@
           <div class="collapse navbar-collapse " id="navbar-cph">
             <div class="b-page-navigation ">
               <div class="b-page-navigation__pages">
-                  <ul class="navbar-nav ">
-                      <li class="nav-item nav-item px-0">
-                        <a class="nav-link my-0 px-0 " href="index.html">
-                          <span>TheParty.is</span>
-                        </a>
-                      </li>
-                      <li class="nav-item nav-item-custom px-0">
-                        <a class="nav-link my-0 px-0 " href="incopenhagen.html">
-                          <span class="full">in Copenhagen</span><span class="abbr ">in&nbsp;CPH</span>
-                        </a>
-                      </li>
-                      <li class="nav-item nav-item-custom px-0 ">
-                        <a class="nav-link my-0 px-0" href="gettingmarried.html">
-                          <span class="full">Getting Married</span><span class="abbr ">Married</span>
-                        </a>
-                      </li>
-                      <li class="nav-item nav-item-custom px-0 active">
-                        <a class="nav-link my-0 px-0" href="atmadklubben.html">
-                          <span class="full">at Madklubben</span><span class="abbr ">at&nbsp;Mad</span>
-                        </a>
-                      </li>
-                  </ul>
+      
                   <ul class="navbar-nav ml-auto">
-                      <li class="nav-item nav-item-custom ">
-                          <a class="nav-link my-0 px-0 action-button" href="gettingmarried.html">The Itinerary</a>
-                      </li>
+                   
+                    <li class="nav-item">
+                        <a class="nav-link my-0 px-0" href="two.html">Getting Married</a>
+                    </li>
+
+                    <li class="nav-item active">
+                        <a class="nav-link my-0 px-0" href="two-dinner.html">Dinner at Madklubben</a>
+                    </li>
                   </ul>
               </div>
             </div>
@@ -1189,7 +1173,7 @@
                               Whether you're feeling pastries or ice cream or a bit of both, we've got just the place to help you decide.
                             </p>
 
-                            <a class="btn btn-primary-outline btn-lg button-border my-3" href="gettingmarried.html#wed-dessert" role="button" >Back to the Itinerary</a>
+                            <a class="btn btn-primary-outline btn-lg button-border my-3" href="two.html#wed-dessert" role="button" >Back to the Itinerary</a>
 
                           </div>
 
@@ -1218,17 +1202,17 @@
                       <div class="col-6 col-md-4 col-lg-3 py-5 flex-column">
                           <div class="mb-2">
                             <div class="nav-item my-3">
-                              <a class="nav-link px-0 "href="index.html"> TheParty.is </a>
+                              <a class="nav-link px-0 "href=""> TheParty.is </a>
                             </div>
 
                             <div class="nav-item my-3 ">
-                              <a class="nav-link px-0 "href="inportland.html"> in Portland </a>
+                              <a class="nav-link px-0 "href=""> in Portland </a>
                             </div>
                             <div class="nav-item my-3 ">
-                              <a class="nav-link px-0 "href="ingrandrapids.html"> in Grand&nbsp;Rapids </a>
+                              <a class="nav-link px-0 "href=""> in Grand&nbsp;Rapids </a>
                             </div>
                             <div class="nav-item my-3">
-                              <a class="nav-link px-0 "href="faq.html"> FAQ </a>
+                              <a class="nav-link px-0 "href=""> FAQ </a>
                             </div>
 
                             <div class="nav-item my-3">
@@ -1242,14 +1226,14 @@
                           <div class="mb-2">
 
                             <div class="nav-item my-3 ">
-                              <a class="nav-link px-0 "href="incopenhagen.html"> in Copenhagen </a>
+                              <a class="nav-link px-0 "href=""> in Copenhagen </a>
                             </div>
 
                             <div class="nav-item my-3 ">
-                              <a class="nav-link px-0 "href="gettingmarried.html"> Getting Married </a>
+                              <a class="nav-link px-0 "href="two.html"> Getting Married </a>
                             </div>
                             <div class="nav-item my-3 active ">
-                              <a class="nav-link px-0 "href="atmadklubben.html"> At Madklubben </a>
+                              <a class="nav-link px-0 "href="two-dinner.html"> At Madklubben </a>
                             </div>
                             <div class="nav-item my-3">
                               <a class="nav-link px-0" href="https://www.instagram.com/explore/tags/departy18/?hl=en" target="_blank"> &#x23;deParty18 </a>
