--- a/faq.html
+++ b/faq.html
@@ -52,7 +52,7 @@
       <nav class="navbar container-fluid navbar-toggleable-sm navbar-expand-lg fixed-top navbar-light">
 
           <!-- navbar-brand -->
-          <a class="navbar-brand" href="index.html">
+          <a class="navbar-brand" href="one.html">
             <picture>
               <source
                 srcset="images/dp/dp-black.png,
@@ -74,13 +74,13 @@
               <div class="b-page-navigation__pages">
                   <ul class="navbar-nav ">
                       <li class="nav-item ">
-                        <a class="nav-link my-0 px-0 mx-md-3 " href="index.html">
+                        <a class="nav-link my-0 px-0 mx-md-3 " href="one.html">
                           <span>TheParty.is</span>
                         </a>
                       </li>
                       <li class="nav-item ">
                         <a class="nav-link my-0 px-0 mx-md-3 " href="incopenhagen.html">
-                          <span class="full">in Copenhagen</span><span class="abbr ">in&nbsp;FAQ</span>
+                          <span class="full">in Copenhagen</span><span class="abbr ">in&nbsp;CPH</span>
                         </a>
                       </li>
                       <li class="nav-item ">
@@ -96,9 +96,9 @@
                       </li>
                   </ul>
                   <ul class="navbar-nav ml-auto">
-                      <li class="nav-item ">
-                          <a class="my-0 px-0 mx-md-3 rsvp-button" href="rsvp-grr.html">RSVP</a>
-                      </li>
+                    <li class="nav-item mt-2 mb-4 my-lg-0 mr-lg-2 mr-xl-0">
+                      <a class="button-underline px-0 mx-lg-3 " href="rsvp.html">RSVP</a>
+                    </li>
                   </ul>
               </div>
             </div>
@@ -150,9 +150,9 @@
                 <div class="col-10 col-md-7 col-lg-6 offset-lg-3 text-lg-left col-xl-5 my-lg-5  pl-0">
 
                   <p class="faq-question"><em>Three</em> parties, you say?</p>
-                  <p class="">Well, it works this way: <span class="p-link">The Wedding</span> will be a small affair in distant lands, but we still want to celebrate with as many of you as we can. We'd love to have you join us when and where you're able to.
-                  <p class="">Our main <span class="p-link">reception</span> will be an evening party in June on the Willamette River in Portland.</p>
-                  <p class="">And still, we know that a few will be unable to make it, some who have had far too much a hand in her upbringing to miss out on the excitement, so we’ll be headed to <span class="p-link">Grand Rapids</span> in late October.</p>
+                  <p class="">Well, it works this way: <span class="p-link" href="incopenhagen.html">The Wedding</span> will be a small affair in distant lands, but we still want to celebrate with as many of you as we can. We'd love to have you join us when and where you're able to.
+                  <p class="">Our main <span class="p-link" href="inportland.html">reception</span> will be an evening party in June on the Willamette River in Portland.</p>
+                  <p class="">And still, we know that a few will be unable to make it, some who have had far too much a hand in her upbringing to miss out on the excitement, so we’ll be headed to <span class="p-link" href="ingrandrapids.html">Grand Rapids</span> in late October.</p>
 
                   <p class="faq-question">Why Copenhagen?</p>
                   <p class="">It's often the first thing people ask us when we tell them where we’re getting married. We decided early on that travel was something we wanted to pursue together, as a couple, a joint endeavor, always looking to have something on the books, the next destination to plan for and explore. So it was only natural to want to celebrate the big day in a new city far away.</p>
@@ -182,14 +182,14 @@
 
                   <!--First row-->
                   <div class="row d-flex justify-content-center justify-content-lg-start">
-                    <div class="col-11 col-md-10 offset-lg-1 ">
+                    <div class="col-11 col-md-10 offset-lg-4 pl-lg-5">
                       <div class="row nogutter ">
 
                           <!--First column-->
                           <div class="col-6 col-md-4 col-lg-3 py-5 flex-column">
                               <div class="mb-2">
                                 <div class="nav-item my-3">
-                                  <a class="nav-link px-md-0 "href="index.html"> TheParty.is </a>
+                                  <a class="nav-link px-md-0 "href="one.html"> TheParty.is </a>
                                 </div>
                                 <div class="nav-item my-3 ">
                                   <a class="nav-link px-md-0 "href="incopenhagen.html"> in Copenhagen </a>
@@ -229,10 +229,10 @@
 
                 <!--Copyright-->
                 <div class="row d-flex justify-content-center justify-content-lg-start">
-                  <div class="col-11 col-md-10 offset-lg-1 ">
-                    <div class="footer-copyright font-small py-3">
+                  <div class="col-11 col-md-10 offset-lg-4 ">
+                    <div class="footer-copyright font-small py-3 pl-lg-5">
                       <div class="row d-flex justify-content-center justify-content-lg-start">
-                        <div class="col-12 pl-lg-0">
+                        <div class="col-12 pl-lg-3">
                           © 2018 Copyright
                           <a href="http://theparty.is"> Zahuindanda DeForrest & Courtney DeKorte.  </a>
                         </div>
